word[] initial